# modelo-capacidad

./: .gitignore  README.md  pyproject.toml  resultado_prueba.csv
.claude/agents/: eda-financiero-expert.md  optimization-data-scientist.md  physics-data-scientist.md
.claude/skills/bancolombia-report/: SKILL.md
docs/: arquitectura.md  documento_final.md  index.html  informe_ejecutivo.tex  informe_interactivo.html  metodologias.html  variables_adicionales.md
notebooks/: 01_eda_clientes_y_red_comercial.ipynb  02_eda_capacidad_y_tiempos.ipynb  03_modelo_optimizacion.ipynb  04_modelo_fisica_estadistica.ipynb  05_dashboard_ejecutivo.ipynb
src/modelo_capacidad/: __init__.py  generate_report.py  run_all.py
src/modelo_capacidad/data/: loader.py
src/modelo_capacidad/features/: tiempo_demanda.py
src/modelo_capacidad/models/: __init__.py  analytical.py  greedy.py  milp.py  simulated_annealing.py
src/modelo_capacidad/utils/: validators.py
src/modelo_capacidad/viz/: __init__.py  theme.py
tests/: test_modelos.py  test_tiempo_demanda.py  test_validators.py
