[project]
name = "modelo-capacidad"
version = "0.1.0"
description = "Modelo de capacidad para asignación óptima de clientes a Gerentes de Inversión - Bancolombia DICAGI"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "DICAGI" }
]
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "plotly>=5.20.0",
    "kaleido==0.2.1",
    "pulp>=2.8.0",
    "scipy>=1.13.0",
    "openpyxl>=3.1.0",
    "pydantic>=2.6.0",
    "tqdm>=4.66.0",
    "rich>=13.7.0",
    "pyarrow>=15.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ipython>=8.20.0",
]
notebook = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "jupyterlab>=4.1.0",
    "nbformat>=5.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/modelo_capacidad"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "PD"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
